crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_046_m46_Rumble_Station_15_in_1_USA_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-046-m46/Rumble Station - 15 in 1 (USA) (Unl).nes
rom_sha256=10f35936f21925eb52b4b1f49e576fa2f51dca019c8d880c6d6dfef80f56fc35
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=9b347ca7ed24b247
checkpoint f900 fb_fnv1a64=2936a040165a4f38
checkpoint f1100 fb_fnv1a64=2936a040165a4f38
